--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -519,7 +519,7 @@ dispute.</p>
     <div class="item">&nbsp;</div>
     <div class="item"><em>Witnesses</em></div>
     <div class="item">(Signed)</div>
-    <div class="item">( ,, )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
   </div>
   <div class="column">
     <div class="item">&nbsp;</div>
@@ -842,10 +842,10 @@ and I add, let us work together, let me also approve of those who are received.<
 <div class="row liv_022004-2">
   <div class="column" n="1">
     <div class="item">(Signed)</div>
-    <div class="item">( ,, )</div>
-    <div class="item">( ,, )</div>
-    <div class="item">( ,, )</div>
-    <div class="item">( ,, )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
     <div class="item">&nbsp;</div>
     <div class="item">&nbsp;</div>
     <div class="item">&nbsp;</div>
@@ -1010,99 +1010,274 @@ and I add, let us work together, let me also approve of those who are received.<
   </div>
 </div>
 
-<!-- 12 --> <!--
-47
+<!-- page break -->
 
-( ,, ) 
-M<span class="small">OKOWANI</span> 
-T<span class="small">HOGANE</span>
-P<span class="small">HITTWE</span> 
-M<span class="small">OOKODI</span>
-N<span class="small">OANVOADICKMEWE</span> 
-L<span class="small">ETHAKU</span>
-N<span class="small">KOBELE</span>.
-M<span class="small">OPI</span> 
-M<span class="small">OROA</span>.
-G<span class="small">UBUSATU</span>.
-M<span class="small">OTHELWA</span> 
-M<span class="small">OTHIBO</span> 
-K<span class="small">GOSIEGAU</span>. 
- M<span class="small">OGKWATHI</span>
-M<span class="small">OTHOESI</span> 
- M<span class="small">UALIFIIE</span>.
-Signed in Kgotha.
-Witnesssed by :—
-E<span class="small">DWIN</span> L<span class="small">LOYD</span> 
-G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
-F<span class="small">RANK</span> W<span class="small">HITELY</span>.
-Translated from the Sechuana by—
-J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
+<fw class="center halfbottommargin">47</fw>
 
-H.
-P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>, 25th May 1885.
-Molopolole, 25th May 1885.
-I, Sechele, son of Mochwasebi, Chief of the Bakwena, having with me my sons and
+<div class="row liv_022004-2">
+  <div class="column" n="1">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OKOWANI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">P<span class="small">HITTWE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">N<span class="small">OANVOADICKMEWE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OPI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OTHELWA</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">GOSIEGAŬ</span>.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OTHOESI</span> </div>
+    <div class="item">&nbsp;</div>
+  </div>
+  <div class="column" n="3">
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+  <div class="column" n="4">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="5">
+    <div class="item">&nbsp;</div>
+    <div class="item">T<span class="small">HOGANE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OOKODI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">L<span class="small">ETHAKU</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">N<span class="small">KOBELE</span>.</div>
+    <div class="item">M<span class="small">OROA</span>.</div>
+    <div class="item">G<span class="small">UBUSATU</span>.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OTHIBO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OGKWATHI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">UALIFIIE</span>.</div>
+  </div>
+  <div class="column" n="6">
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+</div>
+
+<p class="noindent">Signed in Kgotha.</p>
+
+<p>Witnesssed by :—</p>
+<div class="row liv_022004-3">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">E<span class="small">DWIN</span>&nbsp;L<span class="small">LOYD</span></div>
+    <div class="item">G<span class="small">EORGE</span>&nbsp;B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</div>
+    <div class="item">F<span class="small">RANK</span>&nbsp;W<span class="small">HITELY</span>.</div>
+  </div>
+</div>
+
+<p class="left5">Translated from the Sechuana by—</p>
+<div class="row liv_022004-4">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.</div>
+  </div>
+</div>
+
+<hr class="milestone halfline quarterline center">
+
+<p class="center noindent">H.</p>
+<p class="center noindent halfbottommargin">P<span class="small">ROPOSALS</span> of the Chief S<span class="small">ECHELE</span>, 25th May 1885.</p>
+
+<p class="right right1">Molopolole, 25th May 1885.</p>
+<p>I, Sechele, son of Mochwasebi, Chief of the Bakwena, having with me my sons and
 my younger brothers, have heard the message concerning the protection of the Queen of
-England, and give thanks for it.
-Concerning the laws which shall be established in the country, I say I wish to rule
+England, and give thanks for it.</p>
+<p>Concerning the laws which shall be established in the country, I say I wish to rule
 among my people according to custom, but I give to the Queen to rule among white
-people wherever they are.
-I wish to show my thankfulness for the Protectorate by giving to the Queen part of
+people wherever they are.</p>
+<p>I wish to show my thankfulness for the Protectorate by giving to the Queen part of
 my country, that it may be hers and her people's whom she may wish to place in it.
 I wish to give them the country like an island between the Notwani and Marico and
 Limpopo. Further I give them the country of Gaina to go as far as the limit of the
 Batnoana, and to take in Duttwe and Morettwe, and to reach to pan of Moshui
-(Thacwe).
-Further I wish to establish that the country concerning which I am speaking is not
+(Thacwe).</p>
+<p>Further I wish to establish that the country concerning which I am speaking is not
 saleable according to Bakwena. I say let this go on to be the law of the country.
 And as to the country which I give to the Queen, I mean that we shall hunt in it
-while there is still game in it.
-S<span class="small">ECHELE</span>.
-S<span class="small">EBELE</span>.
-K<span class="small">GARI</span>.
-K<span class="small">GOSILINTSI</span>
-M<span class="small">OTSIOKHIMO</span>.
-Witnesses :— M<span class="small">HIKO</span>.
-F<span class="small">REDK</span>. W. W<span class="small">ALKER</span>.
-G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
-Translated from the Sechuana by— 
-J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
-F4
+while there is still game in it.</p>
 
---> <!-- 13 --> <!--
-48
-I.
-P<span class="small">ROPOSALS</span> of the Chief G<span class="small">HASITSIVE</span>, 29th May 1885.
-Kanye, 29th May 1885.
-I, Ghasitsive, Chief of the Bangwaketsi, with my son and younger brothers, have
+<div class="row liv_022004-5">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">S<span class="small">ECHELE</span>.</div>
+    <div class="item">S<span class="small">EBELE</span>.</div>
+    <div class="item">K<span class="small">GARI</span>.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">GOSILINTSI</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OTSIOKHIMO</span>.</div>
+    <div class="item">M<span class="small">HIKO</span>.</div>
+  </div>
+  <div class="column" n="3">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+</div>
+
+<p>Witnessses :—</p>
+<div class="row liv_022004-3">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">F<span class="small">RANK</span>&nbsp;W.&nbsp;W<span class="small">ALKER</span>.</div>
+    <div class="item">G<span class="small">EORGE</span>&nbsp;B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</div>
+  </div>
+</div>
+
+<p class="left7">Translated from the Sechuana by—</p>
+<div class="row liv_022004-6">
+  <div class="column" n="1">
+    <div class="item">J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.</div>
+  </div>
+</div>
+
+<hr class="milestone halfline quarterline center">
+
+<p class="center noindent">F4</p>
+
+<!-- page break -->
+
+<fw class="center halfbottommargin">48</fw>
+
+<p class="center noindent">I.</p>
+<p class="center noindent halfbottommargin">P<span class="small">ROPOSALS</span> of the Chief G<span class="small">HASITSIVE</span>, 29th May 1885.</p>
+
+<p class="right right1">Kanye, 29th May 1885.</p>
+<p>I, Ghasitsive, Chief of the Bangwaketsi, with my son and younger brothers, have
 heard the message of the Protectorate of the Queen of England, and we give thanks for
 it. And we wish to show our thankfulness for this protection by giving to the Qucen
 a certain part of our country, that it may be hers and her people's whom she may wish
 to place in it. And we wish to give them the country on the east on the Metsemashwani,
-where the Bakwana boundary line cuts, and from thence to Mahukhucwe, and 
+where the Bakwana boundary line cuts, and from thence to Mahukhucwe, and
 Maugerlanong, and Boshwelatton, and Gamathuba, and Mabete, and Pitsanapotlokwe, and on
 till you reach Ramatlabana. Further, on the west side also, I apportion to the English
 my country beginning at Sitsago (Moshen Tackwi), and proceeding due south till you
 reach where the Baralong begins. The lands of Kokong (Magwate), Bosahorsewa, and
 Kokonti, and the country lying to the west, are the lands which now belong to the
-English through our agreement and friendship.
-And I wish to rule among my people in the country of the Bangwaketsi which
+English through our agreement and friendship.</p>
+<p>And I wish to rule among my people in the country of the Bangwaketsi which
 remains over. Nevertheless I do not refuse the advice and help of the English, as I
 shall be dwelling among them. And in necessary works within that country, it is I,
 as Chief of my people, who will be answerable for them. And I give to the Queen to
 rule above me, as she is the protector of the whole country, while I rule under her
 among my own people, white inhabitants of the country being under the rule of the
-Queen.
-And I desire that the law which the messenger of the Queen has helped me to
+Queen.</p>
+<p>And I desire that the law which the messenger of the Queen has helped me to
 establish concerning strong drink should continue to be law throughout the whole of
 my country. And the Bechuana law that the country (land) is unsaleable, I wish that
-it also should continue to be law.
-With reference to the white men who are placed in the country which I set apart
+it also should continue to be law.</p>
+<p>With reference to the white men who are placed in the country which I set apart
 to-day for the English, I wish to have a voice in approving of them. As to the country
 which I have apportioned to the Queen in the West, I desire that my people may hunt
-in it while the game is still there.
+in it while the game is still there.</p>
 
-G<span class="small">HASITSIVE</span>
+<!-- G<span class="small">HASITSIVE</span>
 B<span class="small">ATHOEN</span>
 L<span class="small">EGOTSAMA</span>
 K<span class="small">UMUNAO</span>
