--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -73,7 +73,7 @@
 
 <p class="center noindent">No. 34.</p>
 <p class="center noindent halfbottommargin">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
-<span class="caps"><span class="small">THE</span> EARL OF DERBY</span>, K.G. &nbsp;&nbsp;&nbsp; (Received July 15, 1885.)</p>
+<span class="caps"><span class="small">THE</span> EARL OF DERBY</span>, K.G. &nbsp;&nbsp; (Received July 15, 1885.)</p>
 <p class="noindent">M<span class="small">Y</span> <span class="caps">L<span class="small">ORD</span></span>, <span class="right right1">Government House, Capetown, June 24, 1885.</span></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I <span class="small">HAVE</span> the honour to enclose, for your information, a copy of a despatch which
 I have received from Sir Charles Warren, covering reports of interviews with the
@@ -1277,21 +1277,87 @@ to-day for the English, I wish to have a voice in approving of them. As to the c
 which I have apportioned to the Queen in the West, I desire that my people may hunt
 in it while the game is still there.</p>
 
-<!-- G<span class="small">HASITSIVE</span>
-B<span class="small">ATHOEN</span>
-L<span class="small">EGOTSAMA</span>
-K<span class="small">UMUNAO</span>
-B<span class="small">OME</span>
-T<span class="small">ELEKELEO</span>
-M<span class="small">ASEU</span>
-M<span class="small">OLIETSA</span>
-K<span class="small">GAMA</span>
-M<span class="small">OISAKAMO</span>
+<div class="row liv_022004-7">
+  <div class="column" n="1">
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">(Signed)</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">&nbsp;</div>
+    <div class="item">G<span class="small">HASITSIVE</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">B<span class="small">ATHOEN</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">L<span class="small">EGOTSAMA</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">UMUNAO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">B<span class="small">OME</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">T<span class="small">ELEKELEO</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">ASEU</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OLIETSA</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">K<span class="small">GAMA</span></div>
+    <div class="item">&nbsp;</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">M<span class="small">OISAKAMO</span></div>
+  </div>
+  <div class="column" n="3">
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">&nbsp;</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+    <div class="item">his</div>
+    <div class="item">X</div>
+    <div class="item">mark.</div>
+  </div>
+</div>
 
-Witnesses :— 
-B. C. F<span class="small">RERE</span>.
-G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
-</section> -->
+<p>Witnesses :—</p>
+<div class="row liv_022004-3">
+  <div class="column" n="1">
+    <div class="item">(Signed)</div>
+    <div class="item">( &nbsp;&nbsp;&nbsp;&nbsp;,,&nbsp;&nbsp;&nbsp;&nbsp; )</div>
+  </div>
+  <div class="column" n="2">
+    <div class="item">B.C.&nbsp;F<span class="small">RERE</span>.</div>
+    <div class="item">G<span class="small">EORGE</span>&nbsp;B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</div>
+  </div>
+</div>
+
+</section>
 
 <!-- start seg 3 -->
 </div>
