--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -1357,6 +1357,8 @@ in it while the game is still there.</p>
   </div>
 </div>
 
+<hr class="milestone halfline liv_022004">
+
 </section>
 
 <!-- start seg 3 -->
