--- a/html/recovering-histories/botswana/liv_022003_HTML.html
+++ b/html/recovering-histories/botswana/liv_022003_HTML.html
@@ -67,26 +67,26 @@
 
 <section class="recovering-histories">
 
-  High Commissioner's Notice
-  It is hereby notified for public information,
-  that Her Majesty's Government have
-  established a British Protectorate over Bechuanaland
-  and the Kalahari. The Protectorate
-  extends over the parts of South Africa situate
-  west of the boundary of the South African
-  Republic, as defined by the Convention made
-  at London on the 27th day of February,
-  1884, between Her Majesty and the said Republic;
-  north of the Colony of the Cape of Good
-  Hope; east of the 20th Meridian of east longitude;
-  and south of the 22nd parallel of south latitude;
-  and not within the jurisdiction of any civilized
-  power.
-  By command of H.E. the High Commissioner,
-  Graham Bower,
-  Imperial Secretary
-  Government House, Cape Town,
-  23nd March, 1885.
+<h2 class="title liv_022003">High Commissioner's Notice</h2>
+<p class="noindent"><span class="firstword liv_022003"><span class="dropcap liv_022003">I</span><span class="small">T</span></span> is hereby notified for public information,
+that Her Majesty's Government have
+established a British Protectorate over Bechuanaland
+and the Kalahari. The Protectorate
+extends over the parts of South Africa situate
+west of the boundary of the South African
+Republic, as defined by the Convention made
+at London on the 27th day of February,
+1884, between Her Majesty and the said Republic;
+north of the Colony of the Cape of Good
+Hope; east of the 20th Meridian of east longitude;
+and south of the 22nd parallel of south latitude;
+and not within the jurisdiction of any civilized
+power.</p>
+<p>By command of H.E. the High Commissioner,<br/>
+<span class="caps right right4">Graham Bower,</span><br/>
+<span class="right right1">Imperial Secretary.</span></p><br/>
+<p><span class="leftmargin">Government House, Cape Town,</span><br/>
+<span class="left5">23nd March, 1885.</span></p>
 
 </section>
 
@@ -115,7 +115,7 @@
   <h3 id="source-article-details">Source Volume Details</h3>
   <p id="article-title"><strong>Volume Title:</strong> <em>The Cape of Good Hope Government Gazette</em></p>
   <!-- <p id="article-creator"><strong>Volume Creator:</strong> </p> -->
-  <p id="series"><strong>Series:</strong> </p>
+  <!-- <p id="series"><strong>Series:</strong> </p> -->
   <p id="date"><strong>Date:</strong> 24 March 1885</p>
   <p id="volume"><strong>Volume(s):</strong> </p>
   <!-- <p id="issue"><strong>Issue(s):</strong> </p> -->
