--- a/html/recovering-histories/botswana/liv_022003_HTML.html
+++ b/html/recovering-histories/botswana/liv_022003_HTML.html
@@ -112,15 +112,15 @@ power.</p>
   <p><strong>Accessibility:</strong> <em>One More Voice</em> digital facsimiles approximate the textual, structural, and material features of original documents. However, because such features may reduce accessibility, each facsimile allows users to toggle such features on and off as needed.</p>
 </section>
 <section class="metadata" aria-labelledby="source-article-details">
-  <h3 id="source-article-details">Source Volume Details</h3>
-  <p id="article-title"><strong>Volume Title:</strong> <em>The Cape of Good Hope Government Gazette</em></p>
-  <!-- <p id="article-creator"><strong>Volume Creator:</strong> </p> -->
+  <h3 id="source-article-details">Source Issue Details</h3>
+  <p id="article-title"><strong>Issue Title:</strong> <em>The Cape of Good Hope Government Gazette</em></p>
+  <!-- <p id="article-creator"><strong>Issue Creator:</strong> </p> -->
   <!-- <p id="series"><strong>Series:</strong> </p> -->
   <p id="date"><strong>Date:</strong> 24 March 1885</p>
-  <p id="volume"><strong>Volume(s):</strong> </p>
+  <p id="issue"><strong>Issue(s):</strong> 6589</p>
   <!-- <p id="issue"><strong>Issue(s):</strong> </p> -->
-  <p id="page"><strong>Page(s):</strong> </p>
-  <p id="repository"><strong>Repository:</strong>  <a aria-label="External Link" href=""></a></p><!-- fix -->
+  <p id="page"><strong>Page(s):</strong> [615]</p>
+  <p id="repository"><strong>Repository:</strong>  <a aria-label="External Link" href="https://librarysearch.lse.ac.uk/permalink/44LSE_INST/1f110cn/alma9949253910302021">London School of Economics</a></p><!-- fix -->
 </section>
 
 <!-- start seg 4 -->
