--- a/html/recovering-histories/botswana/liv_022003_HTML.html
+++ b/html/recovering-histories/botswana/liv_022003_HTML.html
@@ -65,10 +65,10 @@
 <div class="TEI">
 <!-- end seg 2 -->
 
-<section class="recovering-histories">
+<section class="recovering-histories liv_022003">
 
-<h2 class="title liv_022003">High Commissioner's Notice</h2>
-<p class="noindent"><span class="firstword liv_022003"><span class="dropcap liv_022003">I</span><span class="small">T</span></span> is hereby notified for public information,
+<h2 class="title">High Commissioner's Notice</h2>
+<p class="noindent"><span class="firstword"><span class="dropcap">I</span><span class="small">T</span></span> is hereby notified for public information,
 that Her Majesty's Government have
 established a British Protectorate over Bechuanaland
 and the Kalahari. The Protectorate
