--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -65,7 +65,7 @@
 <div class="TEI">
 <!-- end seg 2 -->
 
-<section class="recovering-histories">
+<section class="recovering-histories liv_022004">
 
  <!-- page break -->
 
@@ -142,6 +142,7 @@ drink was sent away or destroyed.</p>
 man did not drink it. If the white man were to bring up kegs of castor oil, would</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">37</fw>  
 
@@ -214,6 +215,7 @@ Montsioa's?</p>
 <p class="center noindent">E 3</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">38</fw>
 
@@ -282,6 +284,7 @@ to buy ivory. We were told he was the Boer chief. I have no more to say, but tha
 feel assured I am an Englishman.</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">39</fw>
 
@@ -353,6 +356,7 @@ protection, but if there is to be a paying of taxes, then it is another thing.</
 <p class="center noindent">E 4</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">40</fw>
 
@@ -422,6 +426,7 @@ When Mankoroane, Montsioa, Ghasitsive are resuscitated, then we shall see the re
 a Protectorate, and there will not be one dissentient voice against it in the whole tribe.</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">41</fw>
 
@@ -493,6 +498,7 @@ camp to play off against me directly you go away. In any case, are we not in the
 <p class="center noindent"><span class="left leftmargin smallest">A 17830.</span> <span class="center">F</span></p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">42</fw>
 
@@ -589,6 +595,7 @@ liquor had been introduced into these territories, and many of the rich people h
 acquired a longing for strong drink, and would sell all or anything they had to obtain</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">43</fw>
 
@@ -660,6 +667,7 @@ will sell the country. We should be glad if the Queen gave our Chief a large tra
 <p class="center noindent">F2</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">44</fw>
 
@@ -731,6 +739,7 @@ ideas are the same, as far as I can see, and I shall have much pleasure in bring
 Her Majesty the papers he has made. I am very glad to hear of the improvements the</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">45</fw>
 
@@ -797,12 +806,13 @@ at present it is in my country, and while it is still there I hold that it ought
 hunted by my people. I know that the help and protection of the Queen requires
 money, and I agree that that money should be paid by the country protected. I have
 thought how this can be done; I mean plans which can be thought out at the beginning</p>
-<hr/>
+<hr class="milestone" />
 <p class="small noindent center" id="note1">*See general map of concessions profixed to this Despatch. <a class="small" href="#note1back">[back]</a></p>
 
 <p class="center noindent">F3</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">46</fw>
 
@@ -1012,6 +1022,7 @@ and I add, let us work together, let me also approve of those who are received.<
 </div>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">47</fw>
 
@@ -1243,6 +1254,7 @@ while there is still game in it.</p>
 <p class="center noindent">F4</p>
 
 <!-- page break -->
+<hr />
 
 <fw class="center halfbottommargin">48</fw>
 
@@ -1358,7 +1370,7 @@ in it while the game is still there.</p>
   </div>
 </div>
 
-<hr class="milestone halfline liv_022004">
+<hr class="milestone halfline closing">
 
 </section>
 
