--- a/html/materials.html
+++ b/html/materials.html
@@ -84,6 +84,19 @@
 
 			<section class="sections">
 				<div class="section-container">
+					<a href="/html/materials/victorian_folklore.html">
+						<div class="section-image">
+							<img width="329" height="264" src="/img/main-pages/tiles/liv_023044_0001_deriv-824px.jpg" srcset="/img/main-pages/tiles/liv_023044_0001_deriv-824px.jpg 824w, /img/main-pages/tiles/liv_023044_0001_deriv-660px.jpg 660w, /img/main-pages/tiles/liv_023044_0001_deriv-582px.jpg 582w, /img/main-pages/tiles/liv_023044_0001_deriv-550px.jpg 550w, /img/main-pages/tiles/liv_023044_0001_deriv-522px.jpg 522w, /img/main-pages/tiles/liv_023044_0001_deriv-504px.jpg 504w, /img/main-pages/tiles/liv_023044_0001_deriv-476px.jpg 476w, /img/main-pages/tiles/liv_023044_0001_deriv-412px.jpg 412w, /img/main-pages/tiles/liv_023044_0001_deriv-330px.jpg 330w, /img/main-pages/tiles/liv_023044_0001_deriv-291px.jpg 291w, /img/main-pages/tiles/liv_023044_0001_deriv-275px.jpg 275w, /img/main-pages/tiles/liv_023044_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Two creatures with the respective faces of a cat and owl flying in a star-strewn night sky." />
+							<div class="image-overlay"></div>
+						</div>
+						<div aria-labelledby="bipoc-voices">
+							<h3 id="bipoc-voices">Selections from Victorian Folklore</h3>
+							<p>Pedagogical materials on plot, context, and composition process<p>
+						</div>
+					</a>
+				</div>
+
+				<div class="section-container">
 					<a href="/html/bipoc-voices/bv-home.html">
 						<div class="section-image">
 							<img width="329" height="264" src="/img/main-pages/tiles/liv_023091_0001_deriv-824px.jpg" srcset="/img/main-pages/tiles/liv_023091_0001_deriv-824px.jpg 824w, /img/main-pages/tiles/liv_023091_0001_deriv-660px.jpg 660w, /img/main-pages/tiles/liv_023091_0001_deriv-582px.jpg 582w, /img/main-pages/tiles/liv_023091_0001_deriv-550px.jpg 550w, /img/main-pages/tiles/liv_023091_0001_deriv-522px.jpg 522w, /img/main-pages/tiles/liv_023091_0001_deriv-504px.jpg 504w, /img/main-pages/tiles/liv_023091_0001_deriv-476px.jpg 476w, /img/main-pages/tiles/liv_023091_0001_deriv-412px.jpg 412w, /img/main-pages/tiles/liv_023091_0001_deriv-330px.jpg 330w, /img/main-pages/tiles/liv_023091_0001_deriv-291px.jpg 291w, /img/main-pages/tiles/liv_023091_0001_deriv-275px.jpg 275w, /img/main-pages/tiles/liv_023091_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Volumes of Juvenile Missionary Annual (1870) and Juvenile Missionary Magazine (1874) side by side." />
