--- a/html/materials/victorian_folklore.html
+++ b/html/materials/victorian_folklore.html
@@ -75,7 +75,7 @@
 					<h2 id="folklore">Selections from Victorian Folklore</h2>
 					<span class="authorship mobile">	
 						<p>Author: <strong>Indu Ohri</strong> (Boston University)</p>
-						<p>Editor: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
+						<p>Digital Developer: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 					</span>
 					<p><span>Date (publication and updates):</span> <strong>2023</strong></p>
 					<figcaption class="caption-icon desktop">
@@ -94,7 +94,7 @@
 					<section class="production-details authorship desktop" aria-label="Author(s) and Peer Reviewer(s)">
 						<span>
 							<p>Author: <strong>Indu Ohri</strong> (Boston University)</p>
-							<p>Editor: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
+							<p>Digital Developer: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 						</span>
 					</section>
 
@@ -163,7 +163,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> Ohri, Indu. “Selections from Victorian Folklore” (2023). Adrian S. Wisnicki, ed. <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/materials/victorian_folklore.html">https://onemorevoice.org/html/materials/victorian_folklore.html</a>.</p>
+						<p><strong>Cite (MLA):</strong> Ohri, Indu. “Selections from Victorian Folklore” (2023). Adrian S. Wisnicki, dig. dev. <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/materials/victorian_folklore.html">https://onemorevoice.org/html/materials/victorian_folklore.html</a>.</p>
 			
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
