--- a/html/materials/victorian_folklore.html
+++ b/html/materials/victorian_folklore.html
@@ -165,7 +165,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> Ohri, Indu. “Selections from Victorian Folklore” (2023). Adrian S. Wisnicki, dig. dev. <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/materials/victorian_folklore.html">https://onemorevoice.org/html/materials/victorian_folklore.html</a>.</p>
+						<p><strong>Cite (MLA):</strong> Ohri, Indu; and Student Developers. “Selections from Victorian Folklore” (2023). Adrian S. Wisnicki, dig. dev. <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/materials/victorian_folklore.html">https://onemorevoice.org/html/materials/victorian_folklore.html</a>.</p>
 			
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
