--- a/html/materials/victorian_folklore.html
+++ b/html/materials/victorian_folklore.html
@@ -75,12 +75,7 @@
 					<h2 id="folklore">Selections from Victorian Folklore</h2>
 					<span class="authorship mobile">	
 						<p>Lead Developer: <strong>Indu Ohri</strong> (Boston University)</p>
-						<p>Student Developers (Boston University, HU 104, Sum. 2022):</p>
-						<ul class="nostyle-list padded-list noindent-list">
-							<li>(Section 1) <strong>Cordelia Callaud-Guyart</strong>, <strong>Morgan Doyle</strong>, <strong>Kerry O'Gara Donovan</strong>, <strong>Matthew Gin</strong>, <strong>Arly Gomez</strong>, <strong>Isabella Kyprios</strong>, <strong>Anna Li</strong>, <strong>Michael Li</strong>, <strong>Yingqi Li</strong>, <strong>Katherine Liu</strong>, <strong>Luke Mager</strong>, <strong>Margi Lonergan</strong>, <strong>Catherine Lou</strong>, <strong>Guerdon Ligon</strong>, <strong>Mildred Orellana</strong>, <strong>Mitchel Petrovsky</strong>, <strong>Shreya Sharma</strong>, <strong>Arjun Sharma</strong>, <strong>Rui Wen</strong></li>
-							<li>(Section 2) <strong>Rosie Baron</strong>, <strong>Annalise Chai</strong>, <strong>Teagan Foulke</strong>, <strong>Hailee Helfrick</strong>, <strong>Katherine Jiang</strong>, <strong>Jonathan Lee</strong>, <strong>Jonathan Li</strong>, <strong>Haoyi Liu</strong>, <strong>Pavana Manoj</strong>, <strong>Aaron Mulligan</strong>, <strong>Victoria Nnadi</strong>, <strong>Macie Parker</strong>, <strong>Richard Quach</strong>, <strong>Madison Roost</strong>, <strong>Aaryan Sharma</strong>, <strong>Jason Silva</strong>, <strong>Timothy Thai</strong>, <strong>James Thompson</strong>, <strong>Olivia Vegliante</strong>, <strong>Lena Yang</strong>, <strong>Leo Yuan</strong></li>
-							<li>(Section 3) <strong>Lou Arrouays</strong>, <strong>Elizabeth Bright</strong>, <strong>Alexander Camacho</strong>, <strong>Sijia Chai</strong>, <strong>Theodore Chen</strong>, <strong>Emma Claire Everett</strong>, <strong>Janiyah Flagg</strong>, <strong>McKayla Glave</strong>, <strong>Carrie Huang</strong>, <strong>Dylan Huang</strong>, <strong>Emma Kline</strong>, <strong>Erica Lee</strong>, <strong>Lewis Levy</strong>, <strong>Nicholas Lim</strong>, <strong>Denny Liu</strong>, <strong>Lincoln Liu</strong>, <strong>Rachell Paz</strong>, <strong>Ava Pizziferri</strong>, <strong>Sophia Rosa</strong>, <strong>Nabeeha Samater</strong>, <strong>Miko Ukaji</strong>, <strong>Jack Wallace</strong>, <strong>Tammy Xie</strong>, <strong>Weiyi Yang</strong>, <strong>Sara Yazdi</strong>, <strong>Eric Ye</strong></li>
-						</ul>
+						<p>Student Developers (Boston University): <a href="#student-developers">View List</a></p>
 						<p>Digital Developer: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 					</span>
 					<p><span>Date (publication and updates):</span> <strong>2023</strong></p>
@@ -100,12 +95,7 @@
 					<section class="production-details authorship desktop" aria-label="Author(s) and Peer Reviewer(s)">
 						<span>
 							<p>Lead Developer: <strong>Indu Ohri</strong> (Boston University)</p>
-							<p>Student Developers (Boston University, HU 104, Sum. 2022):</p>
-							<ul class="nostyle-list padded-list noindent-list">
-								<li>(Section 1) <strong>Cordelia Callaud-Guyart</strong>, <strong>Morgan Doyle</strong>, <strong>Kerry O'Gara Donovan</strong>, <strong>Matthew Gin</strong>, <strong>Arly Gomez</strong>, <strong>Isabella Kyprios</strong>, <strong>Anna Li</strong>, <strong>Michael Li</strong>, <strong>Yingqi Li</strong>, <strong>Katherine Liu</strong>, <strong>Luke Mager</strong>, <strong>Margi Lonergan</strong>, <strong>Catherine Lou</strong>, <strong>Guerdon Ligon</strong>, <strong>Mildred Orellana</strong>, <strong>Mitchel Petrovsky</strong>, <strong>Shreya Sharma</strong>, <strong>Arjun Sharma</strong>, <strong>Rui Wen</strong></li>
-								<li>(Section 2) <strong>Rosie Baron</strong>, <strong>Annalise Chai</strong>, <strong>Teagan Foulke</strong>, <strong>Hailee Helfrick</strong>, <strong>Katherine Jiang</strong>, <strong>Jonathan Lee</strong>, <strong>Jonathan Li</strong>, <strong>Haoyi Liu</strong>, <strong>Pavana Manoj</strong>, <strong>Aaron Mulligan</strong>, <strong>Victoria Nnadi</strong>, <strong>Macie Parker</strong>, <strong>Richard Quach</strong>, <strong>Madison Roost</strong>, <strong>Aaryan Sharma</strong>, <strong>Jason Silva</strong>, <strong>Timothy Thai</strong>, <strong>James Thompson</strong>, <strong>Olivia Vegliante</strong>, <strong>Lena Yang</strong>, <strong>Leo Yuan</strong></li>
-								<li>(Section 3) <strong>Lou Arrouays</strong>, <strong>Elizabeth Bright</strong>, <strong>Alexander Camacho</strong>, <strong>Sijia Chai</strong>, <strong>Theodore Chen</strong>, <strong>Emma Claire Everett</strong>, <strong>Janiyah Flagg</strong>, <strong>McKayla Glave</strong>, <strong>Carrie Huang</strong>, <strong>Dylan Huang</strong>, <strong>Emma Kline</strong>, <strong>Erica Lee</strong>, <strong>Lewis Levy</strong>, <strong>Nicholas Lim</strong>, <strong>Denny Liu</strong>, <strong>Lincoln Liu</strong>, <strong>Rachell Paz</strong>, <strong>Ava Pizziferri</strong>, <strong>Sophia Rosa</strong>, <strong>Nabeeha Samater</strong>, <strong>Miko Ukaji</strong>, <strong>Jack Wallace</strong>, <strong>Tammy Xie</strong>, <strong>Weiyi Yang</strong>, <strong>Sara Yazdi</strong>, <strong>Eric Ye</strong></li>
-							</ul>
+							<p>Student Developers (Boston University): <a href="#student-developers">View List</a></p>
 							<p>Digital Developer: <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</p>
 						</span>
 					</section>
@@ -113,6 +103,7 @@
 					<section class="toc">
 						<ol aria-label="Menu">
 							<li><a href="#overview">Overview</a></li>
+							<li><a href="#student-developers">Student Developers</a></li>
 							<li><a href="#works-cited">Works Cited</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
@@ -162,6 +153,18 @@
 							</ol>
 
 							<p>All the materials here are published under a <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a> license (CC BY 4.0 Deed) and so are available for immediate use in the classroom.</p>
+					</section>
+
+					<section aria-labelledby="student-developers">
+						<h3 id="student-developers">Student Developers</h3>
+
+						<p>The following students were all a part of HU 104 in the summer of 2022 at Boston University and helped develop the pedagogical materials listed in the prior section.</p>
+
+						<ul class="nostyle-list padded-list noindent-list">
+							<li><strong>Section 1:</strong> Cordelia Callaud-Guyart, Morgan Doyle, Kerry O'Gara Donovan, Matthew Gin, Arly Gomez, Isabella Kyprios, Anna Li, Michael Li, Yingqi Li, Katherine Liu, Luke Mager, Margi Lonergan, Catherine Lou, Guerdon Ligon, Mildred Orellana, Mitchel Petrovsky, Shreya Sharma, Arjun Sharma, Rui Wen</li>
+							<li><strong>Section 2:</strong> Rosie Baron, Annalise Chai, Teagan Foulke, Hailee Helfrick, Katherine Jiang, Jonathan Lee, Jonathan Li, Haoyi Liu, Pavana Manoj, Aaron Mulligan, Victoria Nnadi, Macie Parker, Richard Quach, Madison Roost, Aaryan Sharma, Jason Silva, Timothy Thai, James Thompson, Olivia Vegliante, Lena Yang, Leo Yuan</li>
+							<li><strong>Section 3:</strong> Lou Arrouays, Elizabeth Bright, Alexander Camacho, Sijia Chai, Theodore Chen, Emma Claire Everett, Janiyah Flagg, McKayla Glave, Carrie Huang, Dylan Huang, Emma Kline, Erica Lee, Lewis Levy, Nicholas Lim, Denny Liu, Lincoln Liu, Rachell Paz, Ava Pizziferri, Sophia Rosa, Nabeeha Samater, Miko Ukaji, Jack Wallace, Tammy Xie, Weiyi Yang, Sara Yazdi, Eric Ye</li>
+						</ul>
 					</section>
 
 					<section aria-labelledby="works-cited">
